samples/_failures_safe/1761605652_9a2abb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5057c4fd.c: In function ‘main’:
./samples/SAFE/__tmp_5057c4fd.c:175:25: error: missing terminating " character
  175 |         fprintf(stderr, "Empty
      |                         ^~~~~~
./samples/SAFE/__tmp_5057c4fd.c:175:9: error: expected expression at end of input
  175 |         fprintf(stderr, "Empty
      |         ^~~~~~~
./samples/SAFE/__tmp_5057c4fd.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5057c4fd.c:175:9: error: expected declaration or statement at end of input
